--- a/Git_Kalindar/Git_Kalindar.csproj
+++ b/Git_Kalindar/Git_Kalindar.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="post-85684-1403338748.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
